Arreglos generales de media query y carpeta de imagenes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- Autor -->
     <meta name="author" content="Brutti Agustina">
     <!-- Link favicon -->
-    <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/imagenes/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assests/imagenes/favicon.ico" type="image/x-icon">
     <!-- Link de bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -45,9 +45,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img class="animate__animated animate__bounceInLeft logo-truck"
-                            src="imagenes/icon.png" alt="Logo Acercarte"><img class="logo-header"
-                            src="imagenes/full-texto.png" alt="Logo Acercarte">
+                    <a class="navbar-brand" href="index.html"><img class="animate__animated animate__bounceInLeft logo-truck"
+                            src="assets/imagenes/icon.png" alt="Logo Acercarte"><img class="logo-header"
+                            src="assets/imagenes/full-texto.png" alt="Logo Acercarte">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
@@ -81,25 +81,25 @@
 
         <main class="main-container">
             <div>
-                <img class="img1-home" src="imagenes/imagen-2-2.jpg" alt="envios">
+                <img class="img1-home" src="assets/imagenes/imagen-2-2.jpg" alt="envios">
             </div>
             <div class="resolveTitle-div">
                 <h1 class="resolveTitle">Resolvé tu logística</h1>
                 <div>
-                    <img class="img4-home" src="imagenes/logistics.png" alt="envios">
+                    <img class="img4-home" src="assets/imagenes/logistics.png" alt="envios">
                     <h2 class="title">Realizar Envíos</h2>
                     <p class="text-subtitle">Resuelve envíos rápidos a tus clientes.</p>
                 </div>
 
                 <div>
-                    <img class="img5-home" src="imagenes/imagen_blog_2.jpg" alt="envios">
+                    <img class="img5-home" src="assets/imagenes/imagen_blog_2.jpg" alt="envios">
                     <h2 class="title">Repartir con Acercarte</h2>
                     <p class="text-subtitle">Regístrate a ti o a tu empresa como repartidor<br> y comienza a realizar
                         entregas.</p>
                 </div>
             </div>
             <div>
-                <img class="img2-home" src="imagenes/imagen-1-1.jpg" alt="envios">
+                <img class="img2-home" src="assets/imagenes/imagen-1-1.jpg" alt="envios">
             </div>
         </main>
 
@@ -149,7 +149,7 @@
                 <button id="show1" class="action second-action"><span>Quiero ser comerciante</span></button>
             </div>
             <div>
-                <img class="img3-home" src="imagenes/imagen_blog_1.jpg" alt="envios">
+                <img class="img3-home" src="assets/imagenes/imagen_blog_1.jpg" alt="envios">
             </div>
             <div class="third-container card-2">
                 <h3 id="h3-2">Transportistas</h3>
@@ -204,16 +204,16 @@
     <!-- inicio de footer -->
     <footer>
         <div>
-            <a href="index.html"></a><img class="logo-footer" src="imagenes/full.png" alt="Logo Acercarte"></a>
+            <a href="index.html"></a><img class="logo-footer" src="assets/imagenes/full.png" alt="Logo Acercarte"></a>
             <ul class="list-footer">
                 <li class="list-1">Ing. Enrique Butty 275 Capital Federal, C1001 AFA, Buenos Aires</li>
                 <li class="list-1"><a class="diferent-a" href="pages/contacto.html"><b>Contacto</b></a></li>
                 <li>
                     <div class="list-2">
                         <a href="https://www.facebook.com/" target="_blank"><img class="logo-redes1 red-facebook"
-                                src="imagenes/facebook.png" alt="Logo Facebook"></a>
+                                src="assets/imagenes/facebook.png" alt="Logo Facebook"></a>
                         <a href="https://www.instagram.com/" target="_blank"><img class="logo-redes2 red-instagram"
-                                src="imagenes/instagram.png" alt="Logo Instagram"></a>
+                                src="assets/imagenes/instagram.png" alt="Logo Instagram"></a>
                     </div>
                 </li>
             </ul>
