--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,8 +20,8 @@
     <!-- Autor -->
     <meta name="author" content="Brutti Agustina">
     <!-- Link favicon -->
-    <link rel="shortcut icon" href="../imagenes/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../imagenes/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/imagenes/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/imagenes/favicon.ico" type="image/x-icon">
     <!-- Link de bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -45,9 +45,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img class="animate__animated animate__bounceInLeft logo-truck"
-                        src="../imagenes/icon.png" alt="Logo Acercarte"><img class="logo-header"
-                        src="../imagenes/full-texto.png" alt="Logo Acercarte">
+                    <a class="navbar-brand" href="../index.html"><img class="animate__animated animate__bounceInLeft logo-truck"
+                        src="../assets/imagenes/icon.png" alt="Logo Acercarte"><img class="logo-header"
+                        src="../assets/imagenes/full-texto.png" alt="Logo Acercarte">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
@@ -127,16 +127,16 @@
     <!-- inicio de footer -->
     <footer>
         <div>
-            <a href="index.html"></a><img class="logo-footer" src="../imagenes/full.png" alt="Logo Acercarte"></a>
+            <a href="index.html"></a><img class="logo-footer" src="../assets/imagenes/full.png" alt="Logo Acercarte"></a>
             <ul class="list-footer">
                 <li class="list-1">Ing. Enrique Butty 275 Capital Federal, C1001 AFA, Buenos Aires</li>
                 <li class="list-1"><a class="diferent-a" href="../pages/contacto.html"><b>Contacto</b></a></li>
                 <li>
                     <div class="list-2">
                         <a href="https://www.facebook.com/" target="_blank"><img class="logo-redes1 red-facebook"
-                                src="../imagenes/facebook.png" alt="Logo Facebook"></a>
+                                src="../assets/imagenes/facebook.png" alt="Logo Facebook"></a>
                         <a href="https://www.instagram.com/" target="_blank"><img class="logo-redes2 red-instagram"
-                                src="../imagenes/instagram.png" alt="Logo Instagram"></a>
+                                src="../assets/imagenes/instagram.png" alt="Logo Instagram"></a>
                     </div>
                 </li>
             </ul>
