Edicion de image alt

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <main class="main-container">
             <div>
-                <img class="img1-home" src="assets/imagenes/imagen-2-2.jpg" alt="envios">
+                <img class="img1-home" src="assets/imagenes/imagen-2-2.jpg" alt="Transportista">
             </div>
             <div class="resolveTitle-div">
                 <h1 class="resolveTitle">Resolvé tu logística</h1>
@@ -92,14 +92,14 @@
                 </div>
 
                 <div>
-                    <img class="img5-home" src="assets/imagenes/imagen_blog_2.jpg" alt="envios">
+                    <img class="img5-home" src="assets/imagenes/imagen_blog_2.jpg" alt="Aplicacion Mobile">
                     <h2 class="title">Repartir con Acercarte</h2>
                     <p class="text-subtitle">Regístrate a ti o a tu empresa como repartidor<br> y comienza a realizar
                         entregas.</p>
                 </div>
             </div>
             <div>
-                <img class="img2-home" src="assets/imagenes/imagen-1-1.jpg" alt="envios">
+                <img class="img2-home" src="assets/imagenes/imagen-1-1.jpg" alt="Transportista">
             </div>
         </main>
 
@@ -149,7 +149,7 @@
                 <button id="show1" class="action second-action"><span>Quiero ser comerciante</span></button>
             </div>
             <div>
-                <img class="img3-home" src="assets/imagenes/imagen_blog_1.jpg" alt="envios">
+                <img class="img3-home" src="assets/imagenes/imagen_blog_1.jpg" alt="cajas de envío">
             </div>
             <div class="third-container card-2">
                 <h3 id="h3-2">Transportistas</h3>
