--- a/pages/blog.html
+++ b/pages/blog.html
@@ -99,7 +99,7 @@
                                 ésta
                                 promesa.
                             </p>
-                            <img src="../assets/imagenes/tips-impulsar-ecommerce-1.jpeg" alt="envios">
+                            <img src="../assets/imagenes/tips-impulsar-ecommerce-1.jpeg" alt="eCommerce shop">
                             <h5>Posted by Gabriel Topola on 21/09/2021 14:34:24</h5>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                                 transportes un
                                 valor más razonable que si lo evaluaran meramente por su peso.
                             </p>
-                            <img src="../assets/imagenes/nota-blog.jpg" alt="envios">
+                            <img src="../assets/imagenes/nota-blog.jpg" alt="programadora">
                             <h5>Posted by Gabriel Topola on 21/09/2021 14:34:24</h5>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                                 cliente.
                                 Luego, tu cliente al comprar, te va a pagar precio de envío y precio de producto.
                             </p>
-                            <img src="../assets/imagenes/imagen_blog_2.jpg" alt="envios">
+                            <img src="../assets/imagenes/imagen_blog_2.jpg" alt="Aplicación mobile">
                             <h5>Posted by Paola Gutierrez on 21/09/2021 14:34:24</h5>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                                 producto comprado o del servicio contratado.
                                 Se establece un plazo de diez días corridos contados a partir de la fecha de entrega.
                             </p>
-                            <img src="../assets/imagenes/devolucion.png" alt="envios">
+                            <img src="../assets/imagenes/devolucion.png" alt="Devoluciones">
                             <h5>Posted by Javier Martin on 21/09/2021 14:34:24</h5>
                         </div>
                     </div>
