--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -78,7 +78,7 @@
 
     <!-- fila de información de mi sitio -->
     <section class="servicios1">
-        <img class="img1-servicios" src="../assets/imagenes/imagen_blog_3.png" alt="envios">
+        <img class="img1-servicios" src="../assets/imagenes/imagen_blog_3.png" alt="Logística de envios para eCommerce">
 
         <h2 class="display-2">¿Qué ofrecemos?</h2>
         <p>Ofrecemos distintas alternativas de envío para que puedas optimizar costos y tiempos
@@ -88,19 +88,19 @@
         <h2 class="display-2">¿Cómo funciona?</h2>
         <div class="steper">
             <div class="step">
-                <img class="animate__animated animate__infinite animate__bounce" src="https://www.zippin.com.ar/themes/zippin_v2/assets/images/landing21/steps/one.png">
+                <img class="animate__animated animate__infinite animate__bounce" src="https://www.zippin.com.ar/themes/zippin_v2/assets/images/landing21/steps/one.png" alt="1">
                 <h3>Registrate</h3>
                 <p>Registrate gratis y pagá solo
                     por los envíos que
                     realices</p>
             </div>
             <div class="step">
-                <img class="animate__animated animate__infinite animate__bounce" src="https://www.zippin.com.ar/themes/zippin_v2/assets/images/landing21/steps/two.png">
+                <img class="animate__animated animate__infinite animate__bounce" src="https://www.zippin.com.ar/themes/zippin_v2/assets/images/landing21/steps/two.png" alt="2">
                 <h3>Cotizá</h3>
                 <p>Cotizá sin costo tus envíos y seleccioná la mejor opción</p>
             </div>
             <div class="step">
-                <img class="animate__animated animate__infinite animate__bounce" src="https://www.zippin.com.ar/themes/zippin_v2/assets/images/landing21/steps/three.png">
+                <img class="animate__animated animate__infinite animate__bounce" src="https://www.zippin.com.ar/themes/zippin_v2/assets/images/landing21/steps/three.png" alt="3">
                 <h3>Despachá</h3>
                 <p>Prepará tus envíos y despachalos rápidamente</p>
             </div>
